--- a/index.html
+++ b/index.html
@@ -19,30 +19,30 @@
         </header>
         <main>
             <ul>
-                <li id="icon-1"><img id="img-1" src="emojis/emoji-1.png" alt=""></li>
-                <li id="icon-2"><img id="img-2" src="emojis/emoji-1.png" alt=""></li>
-                <li id="icon-3"><img id="img-3" src="emojis/emoji-2.png" alt=""></li>
-                <li id="icon-4"><img id="img-4" src="emojis/emoji-2.png" alt=""></li>
-                <li id="icon-5"><img id="img-5" src="emojis/emoji-3.png" alt=""></li>
-                <li id="icon-6"><img id="img-6" src="emojis/emoji-3.png" alt=""></li>
-                <li id="icon-7"><img id="img-7" src="emojis/emoji-4.png" alt=""></li>
-                <li id="icon-8"><img id="img-8" src="emojis/emoji-4.png" alt=""></li>
-                <li id="icon-9"><img id="img-9" src="emojis/emoji-5.png" alt=""></li>
-                <li id="icon-10"><img  id="img-10" src="emojis/emoji-5.png" alt=""></li>
-                <li id="icon-11"><img id="img-11" src="emojis/emoji-6.png" alt=""></li>
-                <li id="icon-12"><img id="img-12" src="emojis/emoji-6.png" alt=""></li>
-                <li id="icon-13"><img id="img-13" src="emojis/emoji-7.png" alt=""></li>
-                <li id="icon-14"><img id="img-14" src="emojis/emoji-7.png" alt=""></li>
-                <li id="icon-15"><img id="img-15" src="emojis/emoji-8.png" alt=""></li>
-                <li id="icon-16"><img id="img-16" src="emojis/emoji-8.png" alt=""></li>
-                <li id="icon-17"><img id="img-17" src="emojis/emoji-9.png" alt=""></li>
-                <li id="icon-18"><img id="img-18" src="emojis/emoji-9.png" alt=""></li>
-                <li id="icon-19"><img  id="img-19" src="emojis/emoji-10.png" alt=""></li>
-                <li id="icon-20"><img id="img-20" src="emojis/emoji-10.png" alt=""></li>
-                <li id="icon-21"><img id="img-21" src="emojis/emoji-11.png" alt=""></li>
-                <li id="icon-22"><img id="img-22" src="emojis/emoji-11.png" alt=""></li>
-                <li id="icon-23"><img id="img-23" src="emojis/emoji-12.png" alt=""></li>
-                <li id="icon-24"><img id="img-24" src="emojis/emoji-12.png" alt=""></li>
+                <li id="icon-1"><img class="emojis/emoji-1.png" id="img-1" src="emojis/emoji-1.png" alt=""></li>
+                <li id="icon-2"><img class="emojis/emoji-1.png" id="img-2" src="emojis/emoji-1.png" alt=""></li>
+                <li id="icon-3"><img class="emojis/emoji-2.png" id="img-3" src="emojis/emoji-2.png" alt=""></li>
+                <li id="icon-4"><img class="emojis/emoji-2.png" id="img-4" src="emojis/emoji-2.png" alt=""></li>
+                <li id="icon-5"><img class="emojis/emoji-3.png" id="img-5" src="emojis/emoji-3.png" alt=""></li>
+                <li id="icon-6"><img class="emojis/emoji-3.png" id="img-6" src="emojis/emoji-3.png" alt=""></li>
+                <li id="icon-7"><img class="emojis/emoji-4.png" id="img-7" src="emojis/emoji-4.png" alt=""></li>
+                <li id="icon-8"><img class="emojis/emoji-4.png" id="img-8" src="emojis/emoji-4.png" alt=""></li>
+                <li id="icon-9"><img class="emojis/emoji-5.png" id="img-9" src="emojis/emoji-5.png" alt=""></li>
+                <li id="icon-10"><img class="emojis/emoji-5.png"   id="img-10" src="emojis/emoji-5.png" alt=""></li>
+                <li id="icon-11"><img class="emojis/emoji-6.png" id="img-11" src="emojis/emoji-6.png" alt=""></li>
+                <li id="icon-12"><img class="emojis/emoji-6.png" id="img-12" src="emojis/emoji-6.png" alt=""></li>
+                <li id="icon-13"><img class="emojis/emoji-7.png" id="img-13" src="emojis/emoji-7.png" alt=""></li>
+                <li id="icon-14"><img class="emojis/emoji-7.png" id="img-14" src="emojis/emoji-7.png" alt=""></li>
+                <li id="icon-15"><img class="emojis/emoji-8.png" id="img-15" src="emojis/emoji-8.png" alt=""></li>
+                <li id="icon-16"><img class="emojis/emoji-8.png" id="img-16" src="emojis/emoji-8.png" alt=""></li>
+                <li id="icon-17"><img class="emojis/emoji-9.png" id="img-17" src="emojis/emoji-9.png" alt=""></li>
+                <li id="icon-18"><img class="emojis/emoji-9.png" id="img-18" src="emojis/emoji-9.png" alt=""></li>
+                <li id="icon-19"><img class="emojis/emoji-10.png"  id="img-19" src="emojis/emoji-10.png" alt=""></li>
+                <li id="icon-20"><img class="emojis/emoji-10.png" id="img-20" src="emojis/emoji-10.png" alt=""></li>
+                <li id="icon-21"><img class="emojis/emoji-11.png" id="img-21" src="emojis/emoji-11.png" alt=""></li>
+                <li id="icon-22"><img class="emojis/emoji-11.png" id="img-22" src="emojis/emoji-11.png" alt=""></li>
+                <li id="icon-23"><img class="emojis/emoji-12.png" id="img-23" src="emojis/emoji-12.png" alt=""></li>
+                <li id="icon-24"><img class="emojis/emoji-12.png" id="img-24" src="emojis/emoji-12.png" alt=""></li>
             </ul>
         </main>
     </div>
